<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mnHome"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/mnCourse"
            android:icon="@drawable/ic_menu_book_24"
            android:title="@string/courses" />
        <item
            android:id="@+id/mnVocab"
            android:icon="@drawable/ic_vocabulary_24"
            android:title="@string/vocabulary" />
        <item
            android:id="@+id/mnRank"
            android:icon="@drawable/ic_leaderboard_24"
            android:title="@string/rank" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/mnShare"
                    android:icon="@drawable/ic_baseline_share_24"
                    android:title="@string/share" />
                <item
                    android:id="@+id/mnRate"
                    android:icon="@drawable/ic_baseline_star_rate_24"
                    android:title="@string/rate_us" />
                <item
                    android:id="@+id/mnAbout"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>
</menu>