<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/avenir_lt_pro_black"
        android:layout_marginTop="20dp"
        android:textColor="@color/title"
        android:text="@string/mode"
        android:textSize="24sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:fontFamily="@font/avenir_lt_pro_light"
        android:layout_marginTop="20dp"
        android:textColor="@color/description"
        android:text="@string/mode_description"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@id/txtDes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="0dp"
        android:checkedButton="@id/rbCount"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbCount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/counting_time"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbNoneCount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/without_counting_time"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#0275d8"
        style="@style/CornerButton"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="@id/radioGroup"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CornerButton"
        android:textSize="18sp"
        android:backgroundTint="#d9534f"
        app:layout_constraintTop_toBottomOf="@id/btnConfirm"
        app:layout_constraintStart_toStartOf="@id/btnConfirm"
        app:layout_constraintEnd_toEndOf="@id/btnConfirm"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel"/>
</androidx.constraintlayout.widget.ConstraintLayout>