<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.UserInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/avenir_lt_pro_light"
            android:text="@string/full_name"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtName"
            app:layout_constraintEnd_toStartOf="@+id/txtName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_lt_pro_black"
            android:text="Mai Quoc Viet"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="123dp"
            android:layout_marginRight="123dp"
            android:fontFamily="@font/avenir_lt_pro_light"
            android:text="@string/gender"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/rdMale"
            app:layout_constraintEnd_toStartOf="@+id/rdFemale"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/rdMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="123dp"
            android:layout_marginRight="123dp"
            android:text="@string/male"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/rdFemale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

        <RadioButton
            android:id="@+id/rdFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/female"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/avenir_lt_pro_light"
            android:text="@string/birthday"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtBirthday"
            app:layout_constraintEnd_toStartOf="@+id/txtBirthday"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtBirthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/avenir_lt_pro_black"
            android:text="01/01/2000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/rdMale" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/avenir_lt_pro_light"
            android:text="@string/address"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtAddress"
            app:layout_constraintEnd_toStartOf="@+id/txtAddress"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/avenir_lt_pro_black"
            android:text="120 Street 01"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/avenir_lt_pro_light"
            android:text="@string/email"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtEmail"
            app:layout_constraintEnd_toStartOf="@+id/txtEmail"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/avenir_lt_pro_black"
            android:text="mqv@gmail.com"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/edit"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>