<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.TabLoginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintWidth_percent=".8"
        android:hint="@string/username"
        app:startIconTint="@color/icon"
        app:startIconDrawable="@drawable/ic_supervised_user_circle_24"
        android:layout_width="0dp"
        style="@style/CustomEditText"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textColorHint="@color/title"
            android:textColor="@color/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomEditText"
        android:id="@+id/layoutPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutUsername"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintWidth_percent=".8"
        android:hint="@string/password"
        app:startIconTint="@color/icon"
        app:startIconDrawable="@drawable/ic_key_24"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColorHint="@color/title"
            android:textColor="@color/content"
            android:inputType="textPassword"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:textColor="@color/description"
        android:background="?selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/CornerButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layoutPassword"
        app:layout_constraintStart_toStartOf="@+id/layoutPassword"
        app:layout_constraintTop_toBottomOf="@id/txtForget"/>
</androidx.constraintlayout.widget.ConstraintLayout>